--- a/app/src/main/res/values-es/values.xml
+++ b/app/src/main/res/values-es/values.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="lema">Tu punto de encuentro!</string>
 
+    <!-- Logueo -->
     <string name="welcome">Bienvenido</string>
     <string name="user">Usuario</string>
     <string name="password">Contraseña</string>
     <string name="login">Iniciar Sesión</string>
     <string name="logup">Registrate</string>
 
-    <string name="lema">Tu punto de encuentro!</string>
-
+    <!-- Menu -->
+    <string name="data">Mis Datos</string>
     <string name="reu">Mis Reus</string>
     <string name="people">Mi Gente</string>
     <string name="gallery">Galeria</string>
@@ -17,8 +19,8 @@
     <string name="options">Opciones</string>
     <string name="log_out">Cerrar sesión</string>
 
-    <!-- Reu -->
-    <string name="new_reu">Crear Reu</string>
+    <!-- Mis Reus -->
+    <string name="new_reu">Registrar Reu</string>
     <string name="search_reu">Buscar Reu</string>
     <string name="record_reu">Historial Reu</string>
 
@@ -28,25 +30,24 @@
     <string name="reu_type">Tipo de Reu</string>
     <string name="place">Lugar</string>
     <string name="go_map">Ir al Mapa</string>
-    <string name="number_people">Cantidad de Invitados</string>
-    <string name="invite_people">Invitar Gente</string>
-
-    <!-- Buscar Reu -->
     <string name="date">Fecha</string>
 
+    <!-- Registar Usuario -->
+    <string name="new_user">Nuevo Usuario</string>
+    <string name="email">Correo electronico</string>
+    <string name="pass">Contraseña</string>
 
-    <!-- Registar Actor -->
+    <!-- Actualizar Usuario -->
     <string name="number">DNI</string>
     <string name="name">Nombre</string>
     <string name="last_name">Apellido</string>
-    <string name="gender">Gender</string>
-    <string name="male">Male</string>
-    <string name="female">Female</string>
+    <string name="gender">Genero</string>
+    <string name="male">Masculino</string>
+    <string name="female">Femenino</string>
     <string name="telephone">Telefono</string>
-    <string name="email">Correo electronico</string>
 
+    <!-- Botones -->
     <string name="save">Grabar</string>
     <string name="cancel">Cancelar</string>
-
 
 </resources>
