--- a/app/src/main/res/layout/fragment_buscar_reu.xml
+++ b/app/src/main/res/layout/fragment_buscar_reu.xml
@@ -6,6 +6,11 @@
     android:orientation="vertical"
     tools:context=".BuscarReuFragment">
 
+    <TextView
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:text="@string/search_reu"
+        android:layout_height="wrap_content" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/tilNombre"
@@ -16,7 +21,7 @@
             android:id="@+id/edtNombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/name"
+            android:hint="@string/reu_name"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
     </android.support.design.widget.TextInputLayout>
@@ -48,11 +53,16 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/btnBuscar"
+        android:text="@string/search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvReus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical" />
-
 
 </LinearLayout>
