--- a/app/src/main/res/menu/activity_principal_drawer.xml
+++ b/app/src/main/res/menu/activity_principal_drawer.xml
@@ -4,6 +4,11 @@
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
+
+        <item
+            android:id="@+id/nav_datos"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="@string/data" />
         <item
             android:id="@+id/nav_reu"
             android:icon="@drawable/ic_menu_camera"
@@ -26,11 +31,11 @@
     <item android:title="Communicate">
         <menu>
             <item
-                android:id="@+id/nav_share"
+                android:id="@+id/nav_opciones"
                 android:icon="@drawable/ic_menu_share"
                 android:title="@string/options" />
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_sesion"
                 android:icon="@drawable/ic_menu_send"
                 android:title="@string/log_out" />
         </menu>
