--- a/app/src/main/res/layout/activity_mapa.xml
+++ b/app/src/main/res/layout/activity_mapa.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MapaActivity">
+
+    <AutoCompleteTextView
+        android:id="@+id/autDireccion"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="AutoComplete TextView">
+        <requestFocus />
+    </AutoCompleteTextView>
 
     <fragment
         android:id="@+id/map"
@@ -14,4 +24,4 @@
 
 
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
