--- a/app/src/main/res/layout/activity_registrar_actor.xml
+++ b/app/src/main/res/layout/activity_registrar_actor.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".RegistrarUsuarioActivity">
+    tools:context=".RegistrarActorActivity">
 
     <TextView
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
         android:background="@drawable/user" />
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/tilEmial"
+        android:id="@+id/tilEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
