--- a/app/src/main/res/layout/activity_galeria_fotos.xml
+++ b/app/src/main/res/layout/activity_galeria_fotos.xml
@@ -35,6 +35,13 @@
             android:layout_gravity="center"
             android:background="@drawable/crear_reu" />
 
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="invisible" />
+
         <Button
             android:id="@+id/btnCamara"
             android:layout_width="40sp"
