ultimas actualizaciones para la presentacion final de Moviles

--- a/app/src/main/res/layout/fragment_gente.xml
+++ b/app/src/main/res/layout/fragment_gente.xml
@@ -17,4 +17,10 @@
         android:layout_height="wrap_content"
         android:scrollbars="vertical" />
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Llamar"
+        android:id="@+id/btnLlamar"/>
+
 </LinearLayout>
